--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,11 @@
 <resources>
-    <string name="app_name">EMI Calculator</string>
-    <string name="emi">Your Car EMI</string>
+    <string name="app_name">CAR EMI Calculator</string>
     <string name="calculate">Calculate Monthly EMI</string>
     <string name="rate">Rate of Interest:</string>
     <string name="principal_amount">Principal Amount:</string>
     <string name="tenure_in_month">Loan term(in month):</string>
     <string name="type_here">Type here</string>
-    <string name="car_emi_calculator">Car EMI Calculator</string>
+    <string name="car_emi_calculator">Car EMI Calculator (Only Rs/- Supported)</string>
     <string name="down_payment">Down Payment:</string>
     <string name="errormsg">You have entered wrong data.</string>
 </resources>
